--- a/Oasis/Base.lproj/Main.storyboard
+++ b/Oasis/Base.lproj/Main.storyboard
@@ -101,22 +101,61 @@
                     <view key="view" contentMode="scaleToFill" id="d2V-Fc-FDn">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="255" verticalHuggingPriority="255" horizontalCompressionResistancePriority="700" verticalCompressionResistancePriority="1" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZHL-Kx-tsQ">
+                                <rect key="frame" x="164.5" y="693" width="85" height="75"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="85" id="OmU-fY-ihw"/>
+                                    <constraint firstAttribute="height" constant="75" id="wIH-uP-twE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal" image="water-button"/>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="-225" translatesAutoresizingMaskIntoConstraints="NO" id="7gt-8x-q0l">
+                                <rect key="frame" x="16" y="60" width="382" height="617"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="233" verticalHuggingPriority="232" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="752" image="heart-plant-pot" translatesAutoresizingMaskIntoConstraints="NO" id="Gnl-AG-PQJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="382" height="617"/>
+                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xF1-Rq-uVP">
+                                        <rect key="frame" x="157" y="0.0" width="225" height="497"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="xF1-Rq-uVP" secondAttribute="bottom" constant="120" id="UOg-fT-vLs"/>
+                                    <constraint firstAttribute="bottom" secondItem="Gnl-AG-PQJ" secondAttribute="bottom" id="cxC-vy-woU"/>
+                                    <constraint firstItem="Gnl-AG-PQJ" firstAttribute="top" secondItem="7gt-8x-q0l" secondAttribute="top" id="jgG-8X-Z2c"/>
+                                    <constraint firstItem="Gnl-AG-PQJ" firstAttribute="centerX" secondItem="7gt-8x-q0l" secondAttribute="centerX" id="jkz-Mo-bw8"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Iaw-Bb-b0t"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.65018060860124893" green="0.90743003313149695" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="ZHL-Kx-tsQ" firstAttribute="top" secondItem="7gt-8x-q0l" secondAttribute="bottom" constant="16" id="4TJ-ob-18R"/>
+                            <constraint firstItem="ZHL-Kx-tsQ" firstAttribute="centerX" secondItem="d2V-Fc-FDn" secondAttribute="centerX" id="8L2-4t-dQr"/>
+                            <constraint firstItem="Iaw-Bb-b0t" firstAttribute="trailing" secondItem="7gt-8x-q0l" secondAttribute="trailing" constant="16" id="CCx-DA-1Ne"/>
+                            <constraint firstItem="Iaw-Bb-b0t" firstAttribute="bottom" secondItem="ZHL-Kx-tsQ" secondAttribute="bottom" constant="45" id="GBg-3t-0dQ"/>
+                            <constraint firstItem="7gt-8x-q0l" firstAttribute="top" secondItem="Iaw-Bb-b0t" secondAttribute="top" constant="16" id="PAz-F7-ReA"/>
+                            <constraint firstItem="7gt-8x-q0l" firstAttribute="leading" secondItem="Iaw-Bb-b0t" secondAttribute="leading" constant="16" id="Us6-jB-uby"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="leaf" catalog="system" id="oJ1-8P-H6o"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ENX-KD-9Ic" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-612" y="186"/>
+            <point key="canvasLocation" x="-613.04347826086962" y="185.49107142857142"/>
         </scene>
     </scenes>
     <resources>
         <image name="bag" catalog="system" width="128" height="128"/>
         <image name="calendar" catalog="system" width="128" height="106"/>
         <image name="gearshape" catalog="system" width="128" height="121"/>
+        <image name="heart-plant-pot" width="200" height="200"/>
         <image name="house" catalog="system" width="128" height="106"/>
         <image name="leaf" catalog="system" width="128" height="109"/>
+        <image name="water-button" width="100" height="82"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
