--- a/Oasis/Base.lproj/Main.storyboard
+++ b/Oasis/Base.lproj/Main.storyboard
@@ -109,6 +109,9 @@
                                         <rect key="frame" x="40" y="0.0" width="302" height="26.5"/>
                                         <fontDescription key="fontDescription" name="Symbol" family="Symbol" pointSize="25"/>
                                         <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="icU-Hl-9Yn" id="ubU-cn-1P3"/>
+                                        </connections>
                                     </textField>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="233" verticalHuggingPriority="232" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="752" image="heart-plant-phase-0" translatesAutoresizingMaskIntoConstraints="NO" id="Gnl-AG-PQJ">
                                         <rect key="frame" x="16" y="42.5" width="350" height="590.5"/>
